Fix to bower.json.

--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "homepage": "https://github.com/drmikeh/bootstrap-filestyle",
   "repository": {
     "type": "git",
-    "url": "git://github.com/foo/bar.git"
+    "url": "git://github.com/drmikeh/bootstrap-filestyle.git"
   },
   "authors": [
     "Markus Lima @markusslima"
