Fixed name in bower.json.

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "bootstrap-filestyle",
+  "name": "drmikeh-bootstrap-filestyle",
   "version": "1.1.1",
   "homepage": "https://github.com/drmikeh/bootstrap-filestyle",
   "repository": {
