--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,7 @@
     "url": "git://github.com/drmikeh/bootstrap-filestyle.git"
   },
   "authors": [
-    "Markus Lima @markusslima"
+    "Markus Lima @markusslima",
     "Michael Hopper @drmikeh"
   ],
   "description": "Bootstrap FileStyle is a quick and simple plugin to help style your form's file upload inputs.",
